editing the alert message

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ window.onload = function() {
   emailjs.send(serviceId, templateId, inputFields)
   .then(() => {
 
-    alert('Thank you' + '! Your message has been sent.');
+    // alert('Thank you' + '! Your message has been sent.');
     // Change button text
     // submitBtn.innertext = "message sent";
 
