--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <i class='bx bx-hive'></i> Honeylicious
+                     <img src="assets/img/IMG-20230602-WA0040.jpg" alt=""> 
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -487,7 +487,7 @@
             <div class="footer__container container grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">
-                        <i class='bx bx-hive'></i> Honeylicious
+                        <img src="assets/img/IMG-20230602-WA0040.jpg" alt="">  
                     </a>
 
                     
