--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <main class="main">
             <!--==================== HOME ====================-->
-            <section class="home" id="home" style= "background: url(assets/img/20231005_071118.jpg); background-position: center;
+            <section class="home" id="home" style= "background: url(assets/img/20231005_071118\ \(1\).jpg); background-position: center;
             background-size: cover;" loading="lazy">
                 <div class="home__container container grid">
                     <!-- <img src="assets/img/20231005_071118.jpg" alt="" loading="lazy" class="home__img"> -->
@@ -166,10 +166,10 @@
             </section> -->
         <section class="about section container" id="about" style= "background: url(assets/img/20230712_171335.jpg); background-position: center;
         background-size: cover; margin-top: 5rem; border-radius: 16px;" loading="lazy">
-            <h2 class="section__title-center" style="color: white">About us</h2>
+            <h2 class="section__title-center">About us</h2>
                     <p class="product__description" style="color: white">We offer the best honey in the market</p>
                     <!-- <img src="assets/img/20231005_071148.jpg" width="900" height="300" alt="" loading="lazy" class="center"> -->
-                    <h2 class="section__title-center" style="color: white">Our mission</h2>
+                    <h2 class="section__title-center">Our mission</h2>
                     <p class="product__description" style="color: white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem illo dolores quam.</p>
                     <div class="home__container container grid">
                         <!-- <img src="assets/img/20231005_062102.jpg" alt="" loading="lazy" class="home__img"> -->
