improving load speed

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             background-size: cover; margin-top: 5rem;">
                 <div class="inner">
                     <h2>Testimonials</h2>
-                    <p class="product__description">People love what we do and we want to let you know</p>
+                    <p class="product__description" style="color: white;">People love what we do and we want to let you know</p>
                     <div class="row">
                         <div class="col">
                             <div class="testimonial">
