improved load speed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             The best organic honey <br> you can have
                         </h1>
                         <p class="home__description">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, id?
+                            Better bees, better honey, better life 
                         </p>
                         <a href="#about" class="button button--flex">
                             Explore <i class="ri-arrow-right-down-line button__icon"></i>
@@ -170,7 +170,7 @@
                     <p class="product__description" style="color: white">We offer the best honey in the market</p>
                     <!-- <img src="assets/img/20231005_071148.jpg" width="900" height="300" alt="" loading="lazy" class="center"> -->
                     <h2 class="section__title-center">Our mission</h2>
-                    <p class="product__description" style="color: white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem illo dolores quam.</p>
+                    <p class="product__description" style="color: white">To improve protect the health and wellbeing of bees, people and our planet.</p>
                     <div class="home__container container grid">
                         <!-- <img src="assets/img/20231005_062102.jpg" alt="" loading="lazy" class="home__img"> -->
                      
@@ -198,7 +198,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="testimonial">
-                                <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, recusandae.
+                                <h3>Very good honey ! I use it in almost everything.
                                 </h3>
                                 <div class="stars">
                                     <i class='bx bxs-star'></i>
@@ -214,7 +214,7 @@
 
                         <div class="col">
                             <div class="testimonial">
-                                <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, recusandae.
+                                <h3>This is raw un processed , non heated above room temperature.
                                 </h3>
                                 <div class="stars">
                                     <i class='bx bxs-star'></i>
@@ -230,7 +230,7 @@
 
                         <div class="col">
                             <div class="testimonial">
-                                <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, recusandae.
+                                <h3>I really enjoy this honey. its nice and thick and if you want, you can pour it from the jar.
                                 </h3>
                                 <div class="stars">
                                     <i class='bx bxs-star'></i>
@@ -331,7 +331,7 @@
                     <div class="inner">
                         <h2 class="section__title-center" style="color: white;">Our shop</h2>
                         
-                        <p>Our honey</p>
+                        <p style="color: black">Delivering the highest quality honey and honey products, while maintaining our commitment to wellbeing at the core of every aspect of our business.</p>
                         <div class="row">
                             <div class="col">
                                 <!-- <div class="testimonial">
@@ -533,7 +533,7 @@
             <section class="questions section" id="faqs" style= "background: url(assets/img/20230821_164922.jpg); background-position: center;
             background-size: cover; margin-top: 5rem;" loading="lazy">
                 <h2 class="section__title-center questions__title container" style="color: white;">
-                    Some common questions <br> were often asked
+                    Some common questions <br> we're often asked
                 </h2>
 
                 <div class="questions__container container grid">
@@ -645,25 +645,25 @@
             <section class="questions section" id="faqs" style= "background: url(assets/img/20230825_131625.jpg); background-position: center;
             background-size: cover; margin-top: 5rem;" loading="lazy">
             <h2 class="section__title-center">Our Team</h2>
-            <p class="product__description">Meet the team behind our magical product</p>
+            <p class="product__description" style="color: white;">Meet the team behind our magical product</p>
             <div class="members">
                 <div class="team-mem">
-                    <img src="assets/img/pexels-pixabay-220453.jpg" class="team">
+                    <img src="assets/img/pexels-andrea-piacquadio-3785079.jpg" class="team">
                     <h3>Mr. Jeremy</h3>
                     <p class="product__description1" style="color: white;">Beekeper</p>
                 </div>
                 <div class="team-mem">
-                    <img src="assets/img/pexels-pixabay-220453.jpg" class="team">
+                    <img src="assets/img/pexels-andrea-piacquadio-3785079.jpg" class="team">
                     <h3>Mr. Jeremy</h3>
                     <p class="product__description1" style="color: white;">Beekeper</p>
                 </div>
                 <div class="team-mem">
-                    <img src="assets/img/pexels-pixabay-220453.jpg" class="team">
+                    <img src="assets/img/pexels-andrea-piacquadio-3785079.jpg" class="team">
                     <h3>Mr. Jeremy</h3>
                     <p class="product__description1" style="color: white;">Beekeper</p>
                 </div>
                 <div class="team-mem">
-                    <img src="assets/img/pexels-pixabay-220453.jpg" class="team">
+                    <img src="assets/img/pexels-andrea-piacquadio-3785079.jpg" class="team">
                     <h3>Mr. Jeremy</h3>
                     <p class="product__description1" style="color: white;">Beekeper</p>
                 </div>
