polishing the website

--- a/index.html
+++ b/index.html
@@ -167,8 +167,63 @@
         <section class="about section container" id="about" style= "background: url(assets/img/20230712_171335.jpg); background-position: center;
         background-size: cover; margin-top: 5rem; border-radius: 16px;" loading="lazy">
             <h2 class="section__title-center">About us</h2>
-                    <p class="product__description" style="color: white">We offer the best honey in the market</p>
+                    <p class="product__description" style="color: white">We offer a wide range of Bee products, Beekeeping equipment & services</p>
                     <!-- <img src="assets/img/20231005_071148.jpg" width="900" height="300" alt="" loading="lazy" class="center"> -->
+                    <div class="row">
+                        <div class="box">
+                            <h3>Hive Products</h3>
+                            <ol>
+                                <li>Honey</li>
+                                <li>Beeswax candles</li>
+                                <li>Bee pollen</li>
+                                <li>Bee venom</li>
+                                <li>Royal jelly</li>
+                                <li>Propolis</li>
+                                <li>Honeycomb</li>
+                                <li>Swarm lure</li>
+                                <li>Wax sheets</li>
+                                <li>And many more...</li>
+                            </ol>
+                        </div>
+
+                        <div class="box">
+                            <h3>Services we offer</h3>
+                            <ol>
+                                <li>Pollination services</li>
+                                <li>Hive inspection/maintenance</li>
+                                <li>Hive treatment</li>
+                                <li>Hive installation</li>
+                                <li>Ethical bee removal/bee transfer</li>
+                                <li>Hive colonization</li>
+                                <li>Beekeeping training</li>
+                                <li>Honey harvesting services</li>
+                                <li>And many more...</li>
+                            </ol>
+                        </div>
+
+                        <div class="box">
+                            <h3>Hive equipment</h3>
+                            <ol>
+                                <li>Beehives</li>
+                                <li>Honey extractor</li>
+                                <li>Bee suit</li>
+                                <li>Uncapping fork</li>
+                                <li>Bee brush</li>
+                                <li>Hive tool</li>
+                                <li>Double strainer/sieve</li>
+                                <li>Electric smoker</li>
+                                <li>Manual smoker</li>
+                                <li>Honey gate</li>
+                                <li>Honey refractometer</li>
+                                <li>Swarm catcher</li>
+                                <li>Honey press machine</li>
+                                <li>Brass wire spur wheel embedder</li>
+                                <li>Beekeepers starter kit</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <h3>We provide ready market for our clients' bee products</h3>
+                    <p>To get a full range of our services and products each out to us at +254731905263 or +254706349748,</p>
                     <h2 class="section__title-center">Our mission</h2>
                     <p class="product__description" style="color: white">To improve protect the health and wellbeing of bees, people and our planet.</p>
                     <div class="home__container container grid">
@@ -548,9 +603,7 @@
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    Always keep your bees well-fed, with sugar water (1:1 sugar/water) 
-                                    or honey in constant supply until the hive has built up, even if there 
-                                    appears to be enough forage outside the hive.
+                                    Our bees forage on natural vegetation found around the apiaries , but we also plant flowering crops like sunflower, canola,  beans, peas, spider plant etc. We also have flower gardens around the apiaries with good quality nectar and pollen.
                                 </p>
                             </div>
                         </div>
@@ -648,8 +701,8 @@
             <p class="product__description" style="color: white;">Meet the team behind our magical product</p>
             <div class="members">
                 <div class="team-mem">
-                    <img src="assets/img/pexels-andrea-piacquadio-3785079.jpg" class="team">
-                    <h3>Mr. Jeremy</h3>
+                    <img src="assets/img/WhatsApp Image 2024-01-19 at 2.10.10 PM.jpeg" class="team">
+                    <h3>Mr. Kelly</h3>
                     <p class="product__description1" style="color: white;">Beekeper</p>
                 </div>
                 <div class="team-mem">
@@ -723,7 +776,17 @@
                         </button>
                     </form>
                 </div> -->
-                <div class="container1">
+                <form action="">
+                <span>LEAVE A MESSAGE</span>
+                <h2>We love to hear from you</h2>
+                <input type="text" placeholder="Your Name">
+                <input type="text" placeholder="E-mail">
+                <input type="text" placeholder="Subject">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <button class="normal">Submit</button>
+                </form>
+
+                <!-- <div class="container1">
                     <div class="contact-box">
                         <div class="left" style= "background: url(assets/img/20231005_071118.jpg); background-size: cover;
                         height: 100%;"></div>
@@ -731,12 +794,12 @@
                             <h2>Contact Us</h2>
                             <input type="email" class="field" placeholder="email" id="email">
                             <input type="text" class="field" placeholder="text" id="text">
-                            <!-- <input type="text" class="field" placeholder="Phone"> -->
+                            <input type="text" class="field" placeholder="Phone">
                             <textarea placeholder="Message" class="field" id="message"></textarea>
                             <button class="btn" id="button">Send</button>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </section>
         </main>
@@ -769,6 +832,7 @@
                     <ul class="footer__data">
                         <li class="footer__information" style="color: white;">+254708374554</li>
                         
+                        <h3 class="footer__title">Follow us</h3>
                         <div class="footer__social">
                             <a href="https://www.facebook.com/" class="footer__social-link" >
                                 <i class="ri-facebook-fill" style="color: white;"></i>
