polishing the website

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         </div>
                     </div>
                     <h3>We provide ready market for our clients' bee products</h3>
-                    <p>To get a full range of our services and products each out to us at +254731905263 or +254706349748,</p>
+                    <!-- <p>To get a full range of our services and products each out to us at +254731905263 or +254706349748,</p> -->
                     <h2 class="section__title-center">Our mission</h2>
                     <p class="product__description" style="color: white">To improve protect the health and wellbeing of bees, people and our planet.</p>
                     <div class="home__container container grid">
